# 05_chat

./: .env  Cargo.toml  app.yml
chat_core/: Cargo.toml
chat_core/fixtures/: decoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml  auth.rest
chat_server/fixtures/: encoding.pem  test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middleware/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/middlewares/: mod.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs  mod.rs
chat_test/: chat.yml
chat_test/tests/: chat.rs
migrations/: 20241228022927_initial.sql  20250102063152_workspace.sql  20250103071353_modify.sql  20250108101232_triggerss.sql
notify_server/: Cargo.toml  index.html  notify.yml
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
sql/: init.sql
src/: lib.rs  main.rs
src/handlers/: chat.rs  message.rs  mod.rs
