[workspace]
members = [ "chat_core","chat_server", "chat_test", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
    # "macros",
] }
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "tls-rustls",
] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
jwt-simple = "0.12.9"
chrono = { version = "0.4.38", features = ["serde"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chat-core ={ path = "./chat_core"}
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-full", "trace","fs"] }
chat-server ={ path = "./chat_server"}
notify-server = { path = "./notify_server"}
