[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.9"
serde_json = "1.0.116"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-full", "trace"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }

[dev-dependencies]
sqlx-db-tester = "0.4.0"
http-body-util = "0.1.1"