[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"


[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true}
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
chrono = {workspace = true}
jwt-simple = {workspace = true}
serde_json = "1.0.116"
tower = { workspace = true }
tower-http = { workspace = true}
console-subscriber = "0.2"
hex = "0.4.3"
mime_guess = "2.0.4"
sha1 = "0.10.6"
chat-core ={ workspace = true}
http-body-util = { version = "0.1.1", optional = true}
sqlx-db-tester = { version = "0.4.2", optional = true}
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }

[dev-dependencies]
chat-server = {workspace = true, features = ["test-util"]}